--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creative-agency website</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="navigation">
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="#">about</a>
+                    <ul>
+                        <li><a href="#">team</a></li>
+                        <li><a href="#">values</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">what we do</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
