Add header to html code

--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
             </ul>
         </div>
     </nav>
+    <header class="splash">
+        <div class="splash-inner">
+            <h1 class="page-title">hello,<br> we are <span>creatively</span>.</h1>
+            <h2 class="page-subtitle">we build brands and products to bring ideas into life.</h2>
+            <a href="#" class="btn btn-one">see our work</a>
+        </div>
+    </header>
 </body>
 </html>
