Add services section to html code

--- a/index.html
+++ b/index.html
@@ -31,5 +31,39 @@
             <a href="#" class="btn btn-one">see our work</a>
         </div>
     </header>
+    <section class="services">
+        <div class="container">
+            <h2 class="section-title">our services</h2>
+            <div class="wrapper">
+                <article class="services-article">
+                    <h4 class="article-title">design</h4>
+                    <div class="article-number">1</div>
+                    <div class="article-content">     
+                        <p>Curabitur ornare.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque.</p>
+                    </div>
+                    <button class="btn btn-two">read more</button>                 
+                </article>
+                <article class="services-article">
+                    <h4 class="article-title">code</h4>
+                    <div class="article-number">2</div>
+                    <div class="article-content">     
+                        <p>Cras vel commodo.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque. In egestas tristique eros id pretium. Fusce id.</p>
+                    </div>
+                    <button class="btn btn-three">read more</button>                 
+                </article>
+                <article class="services-article">
+                    <h4 class="article-title">marketing</h4>
+                    <div class="article-number">3</div>
+                    <div class="article-content">    
+                        <p>Donec fringilla.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque.</p>
+                    </div>
+                    <button class="btn btn-four">read more</button>                 
+                </article>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
