Add work section to html code

--- a/index.html
+++ b/index.html
@@ -65,5 +65,56 @@
             </div>
         </div>
     </section>
+    <section class="work">
+        <div class="container">
+            <h2 class="section-title">our work</h2>
+            <div class="wrapper">
+                <article class="work-article">
+                    <div class="picture">
+                        <img src="./images/1.jpeg" alt="picture" title="picture">
+                    </div>
+                    <div class="picture-description">
+                        <h2 class="article-title">vertigo</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <p>Aliquam viverra odio.</p>
+                        <button class="btn btn-five">read more</button>
+                    </div>
+                </article>
+                <article class="work-article">
+                    <div class="picture">
+                        <img src="./images/2.jpeg" alt="picture" title="picture">
+                    </div>
+                    <div class="picture-description">
+                        <h2 class="article-title">eloquence</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <p>Aliquam viverra odio.</p>
+                        <button class="btn btn-five">read more</button>
+                    </div>
+                </article>
+                <article class="work-article">
+                    <div class="picture">
+                        <img src="./images/3.jpeg" alt="picture" title="picture">
+                    </div>
+                    <div class="picture-description">
+                        <h2 class="article-title">lithe</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <p>Aliquam viverra odio.</p>
+                        <button class="btn btn-five">read more</button>
+                    </div>
+                </article>
+                <article class="work-article">
+                    <div class="picture">
+                        <img src="./images/4.jpeg" alt="picture" title="picture">
+                    </div>
+                    <div class="picture-description">
+                        <h2 class="article-title">serendipity</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <p>Aliquam viverra odio.</p>
+                        <button class="btn btn-five">read more</button>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
