Add contact section to html code

--- a/index.html
+++ b/index.html
@@ -116,5 +116,33 @@
             </div>
         </div>
     </section>
+    <section class="contact">
+        <div class="container">
+            <h2 class="section-title">contact us</h2>
+            <div class="wrapper">                   
+                <form>
+                    <input type="text" placeholder="Your name" required>
+                    <input type="email" placeholder="Your email" required>
+                    <input type="text" placeholder="Subject" required>
+                    <textarea placeholder="Type your message here" cols="30" rows="8"></textarea>
+                    <button type="submit" class="btn btn-one">submit</button>
+                </form>              
+                <div class="contact-data">
+                    <div class="name-specialist">
+                        <h4>name specialist</h4>
+                        <p>Elinor Kinder</p>
+                    </div>
+                    <div class="address">
+                        <h4>address</h4>
+                        <p>299 Browning Lane <br> Cortland <br> 13845 New York</p>
+                    </div>
+                    <div class="phone">
+                        <h4>phone</h4>
+                        <p>609-456-231</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
