Add footer to html code

--- a/index.html
+++ b/index.html
@@ -144,5 +144,12 @@
             </div>
         </div>
     </section>
+    <footer>           
+        <ul>
+            <li>Facebook<a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li>Instagram<a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li>Behance<a href="#"><i class="fa-brands fa-behance"></i></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
