Add media queries

--- a/index.html
+++ b/index.html
@@ -38,29 +38,29 @@
                 <article class="services-article">
                     <h4 class="article-title">design</h4>
                     <div class="article-number">1</div>
-                    <div class="article-content">     
+                    <div class="article-content">
                         <p>Curabitur ornare.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque.</p>
                     </div>
-                    <button class="btn btn-two">read more</button>                 
+                    <button type="button" class="btn btn-two">read more</button>
                 </article>
                 <article class="services-article">
                     <h4 class="article-title">code</h4>
                     <div class="article-number">2</div>
-                    <div class="article-content">     
+                    <div class="article-content">
                         <p>Cras vel commodo.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque. In egestas tristique eros id pretium. Fusce id.</p>
                     </div>
-                    <button class="btn btn-three">read more</button>                 
+                    <button type="button" class="btn btn-three">read more</button>
                 </article>
                 <article class="services-article">
                     <h4 class="article-title">marketing</h4>
                     <div class="article-number">3</div>
-                    <div class="article-content">    
+                    <div class="article-content">
                         <p>Donec fringilla.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dictum lacus, non placerat tellus. Duis vitae mauris nec massa ultrices pellentesque. Nam sagittis magna non neque fringilla, et aliquam purus pellentesque. In magna turpis, iaculis sed tortor vel, malesuada suscipit neque.</p>
                     </div>
-                    <button class="btn btn-four">read more</button>                 
+                    <button type="button" class="btn btn-four">read more</button>
                 </article>
             </div>
         </div>
@@ -77,7 +77,7 @@
                         <h2 class="article-title">vertigo</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <p>Aliquam viverra odio.</p>
-                        <button class="btn btn-five">read more</button>
+                        <button type="button" class="btn btn-five">read more</button>
                     </div>
                 </article>
                 <article class="work-article">
@@ -88,7 +88,7 @@
                         <h2 class="article-title">eloquence</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <p>Aliquam viverra odio.</p>
-                        <button class="btn btn-five">read more</button>
+                        <button type="button" class="btn btn-five">read more</button>
                     </div>
                 </article>
                 <article class="work-article">
@@ -99,7 +99,7 @@
                         <h2 class="article-title">lithe</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <p>Aliquam viverra odio.</p>
-                        <button class="btn btn-five">read more</button>
+                        <button type="button" class="btn btn-five">read more</button>
                     </div>
                 </article>
                 <article class="work-article">
@@ -110,7 +110,7 @@
                         <h2 class="article-title">serendipity</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <p>Aliquam viverra odio.</p>
-                        <button class="btn btn-five">read more</button>
+                        <button type="button" class="btn btn-five">read more</button>
                     </div>
                 </article>
             </div>
@@ -119,14 +119,14 @@
     <section class="contact">
         <div class="container">
             <h2 class="section-title">contact us</h2>
-            <div class="wrapper">                   
+            <div class="wrapper">
                 <form>
                     <input type="text" placeholder="Your name" required>
                     <input type="email" placeholder="Your email" required>
                     <input type="text" placeholder="Subject" required>
                     <textarea placeholder="Type your message here" cols="30" rows="8"></textarea>
                     <button type="submit" class="btn btn-one">submit</button>
-                </form>              
+                </form>
                 <div class="contact-data">
                     <div class="name-specialist">
                         <h4>name specialist</h4>
@@ -144,11 +144,11 @@
             </div>
         </div>
     </section>
-    <footer>           
+    <footer>
         <ul>
-            <li>Facebook<a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-            <li>Instagram<a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li>Behance<a href="#"><i class="fa-brands fa-behance"></i></a></li>
+            <li><a href="#">Facebook<i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="#">Instagram<i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#">Behance<i class="fa-brands fa-behance"></i></a></li>
         </ul>
     </footer>
 </body>
